<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">水木三千</string>

    <string name="main_menu_login">用户登录</string>
    <string name="main_menu_logout">注销登录</string>
    <string name="main_menu_myinfo">我的资料</string>
    <string name="main_menu_search">搜索</string>
    <string name="main_menu_picshow">显示图片</string>
    <string name="main_menu_picnoshow">隐藏图片</string>
    <string name="main_menu_cache">清除缓存</string>
    <string name="main_menu_email">意见反馈</string>
    <string name="main_menu_about">关于我们</string>
    <string name="main_menu_setting">系统设置</string>
    <string name="main_menu_exit">退出程序</string>

    <string name="frame_title_top10">十大热门</string>
    <string name="frame_title_recommend">推荐</string>
    <string name="frame_title_hot_board">分类热门</string>
    <string name="frame_title_board_class">经典</string>
    <string name="frame_title_board_subject">主题</string>
    <string name="frame_title_board_g">文摘</string>
    <string name="frame_title_board_m">保留</string>
    <string name="frame_title_question_site">站务</string>
    <string name="frame_title_fav_board">收藏夹</string>
    <string name="frame_title_fav_box">百宝箱</string>
    <string name="frame_title_tweet_my">我的动弹</string>
    <string name="frame_title_tweet_send">动弹一下</string>
    <string name="frame_title_active_atme">\@我</string>
    <string name="frame_title_active_reply">回我</string>
    <string name="frame_title_active_inbox">收件箱</string>
    <string name="frame_title_active_outbox">发件箱</string>
    <string name="frame_title_active_deleted">垃圾箱</string>



    <string name="footbar_refresh">刷新</string>
    <string name="footbar_comment">评论</string>
    <string name="footbar_share">分享</string>
    <string name="footbar_favorite">收藏</string>
    <string name="footbar_more">更多</string>

    <string name="login_dialog_logo">水木社区</string>
    <string name="login_dialog_account">账号:</string>
    <string name="login_dialog_account_hint">输入水木ID</string>
    <string name="login_dialog_password">密码:</string>
    <string name="login_dialog_password_hint">输入密码</string>
    <string name="login_dialog_reg">注册帐号</string>
    <string name="login_dialog_login">登 录</string>
    <string name="login_dialog_rememberPW">记住密码:</string>
    <string name="login_dialog_autoLogin">自动登录:</string>
    <string name="login_dialog_rememberMe">记住我的登录信息</string>

    <string name="pull_to_refresh_pull_label">用力向下拉到下一页</string>
    <string name="pull_to_refresh_release_label">用力向上拉刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>

    <string name="post_detail_head_title">帖子正文</string>
    <string name="post_detail_lable_pub">发布于</string>
    <string name="post_detail_lable_reply">回复于</string>
    <string name="question_detail_head_title">帖子正文</string>
    <string name="board_detail_head_title">版面</string>
    <string name="post_pub_head_title">我要发帖</string>
    <string name="blog_detail_head_title">博客正文</string>
    <string name="software_detail_head_title">软件详情</string>
    <string name="tweet_detail_head_title">动弹详情</string>
    <string name="tweet_pub_head_title">动弹一下</string>
    <string name="message_detail_head_title">站内信</string>
    <string name="user_center_head_title">用户空间</string>

    <string name="user_friend_head_title">我的好友</string>
    <string name="user_friend_follower">关注(%d)</string>
    <string name="user_friend_fans">粉丝(%d)</string>

    <string name="comment_list_head_title">回帖</string>
    <string name="comment_listitem_type">发布于</string>
    <string name="comment_pub_head_title">评论回复</string>
    <string name="comment_pub_content_hint">输入评论</string>
    <string name="comment_reply_title">---共有 %d 条评论---</string>

    <string name="img_from_camera">手机拍照</string>
    <string name="img_from_album">手机相册</string>
    <string name="ui_insert_image">插入图片</string>

    <string name="setting_head_title">系统设置</string>
</resources>
