<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="35.0dip"
            android:orientation="horizontal"
            android:gravity="center_vertical">
        <Button
                android:id="@+id/frame_btn_refer_at"
                style="@style/frame_button"
                android:text="@string/frame_title_active_atme"/>
        <ImageView android:layout_width="wrap_content" android:layout_height="fill_parent"
                   android:background="@drawable/frame_button_cutline"/>
        <Button
                android:id="@+id/frame_btn_refer_reply"
                style="@style/frame_button"
                android:text="@string/frame_title_active_reply"/>
        <ImageView android:layout_width="wrap_content" android:layout_height="fill_parent"
                   android:background="@drawable/frame_button_cutline"/>
        <Button
                android:id="@+id/frame_btn_mail_inbox"
                style="@style/frame_button"
                android:text="@string/frame_title_active_inbox"/>
        <ImageView android:layout_width="wrap_content" android:layout_height="fill_parent"
                   android:background="@drawable/frame_button_cutline"/>
        <Button
                android:id="@+id/frame_btn_mail_outbox"
                style="@style/frame_button"
                android:text="@string/frame_title_active_outbox"/>
        <ImageView android:layout_width="wrap_content" android:layout_height="fill_parent"
                   android:background="@drawable/frame_button_cutline"/>
        <Button
                android:id="@+id/frame_btn_mail_deleted"
                style="@style/frame_button"
                android:text="@string/frame_title_active_deleted"/>
        <ImageView android:layout_width="wrap_content" android:layout_height="fill_parent"
                   android:background="@drawable/frame_button_cutline"/>


    </LinearLayout>

    <com.jimidigi.smth3k.widget.PullToRefreshListView
            android:id="@+id/frame_listview_mysubject"
            style="@style/widget_listview"
            android:visibility="gone"/>

    <com.jimidigi.smth3k.widget.PullToRefreshListView
            android:id="@+id/frame_listview_mail"
            style="@style/widget_listview"/>
</LinearLayout>